Made minor changes to fix overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ html, body {
   overflow-y: auto;
   height: auto;
   min-height: 100%;
+  overscroll-behavior-y: none;
 }
 
 #root {
